# Open-Genbu-GC

./: .gitignore  .gitmodules  BOM.md  README.md  README.md.bak
PCB/front-panel/front-panel/: fp-info-cache  fp-lib-table  front-panel-bom.csv  front-panel-cache.lib  front-panel.kicad_pcb  front-panel.kicad_prl  front-panel.kicad_pro  front-panel.kicad_sch
PCB/front-panel/front-panel/Gerbers/: front-panel-B_Cu.gbr  front-panel-B_Mask.gbr  front-panel-B_SilkS.gbr  front-panel-Edge_Cuts.gbr  front-panel-F_Cu.gbr  front-panel-F_Mask.gbr  front-panel-F_SilkS.gbr  front-panel-NPTH.drl  front-panel-PTH.drl
PCB/pico-pcb/: fp-info-cache  fp-lib-table  kaito.kicad_mod  logo.kicad_mod  pico-pcb-cache.lib  pico-pcb.csv  pico-pcb.kicad_pcb  pico-pcb.kicad_prl  pico-pcb.kicad_pro  pico-pcb.kicad_sch  sym-lib-table
PCB/pico-pcb/Gerbers/: pico-pcb-B_Cu.gbr  pico-pcb-B_Mask.gbr  pico-pcb-B_Silkscreen.gbr  pico-pcb-Edge_Cuts.gbr  pico-pcb-F_Cu.gbr  pico-pcb-F_Mask.gbr  pico-pcb-F_Silkscreen.gbr  pico-pcb-NPTH.drl  pico-pcb-PTH.drl
PCB/pico-pcb/RP_Silicon_KiCad/B4B-XH-A(LF)(SN)/: B4B-XH-A_LF__SN_.lib  JST_B4B-XH-A(LF)(SN).kicad_mod
firmware/: CMakeLists.txt  README.md  TODO  arm_utils.h  board_io.c  board_io.h  debounce.c  debounce.h  descriptors.c  descriptors.h  io.h  main.c  pinmap.h  proc_queue.c  proc_queue.h  setup.sh  usb_common.h  usb_driver.c  usb_driver.h  usb_gamepad.c  usb_gamepad.h  utils.h  ws2812.c  ws2812.h
